# deep-learning-with-pytorch

./: .gitignore  Chapter02.1.ipynb  Chapter03.ipynb  README.md  chapter00.ipynb  chapter01.ipynb  chapter02.ipynb  main.py  pyproject.toml
data_generation/: simple_linear_regression.py  test.ipynb
data_preparation/: v0.py  v1.py  v2.py
model_configuration/: v0.py  v1.py  v2.py  v3.py
model_training/: v0.py  v1.py  v2.py  v4.py  v5.py
runs/test/: events.out.tfevents.1760798109.Mac.91601.0  events.out.tfevents.1760798257.Mac.6966.0  events.out.tfevents.1760798409.Mac.23346.0  events.out.tfevents.1760798442.Mac.23346.1  events.out.tfevents.1760798463.Mac.23346.2  events.out.tfevents.1760798624.Mac.23346.5  events.out.tfevents.1760799015.Mac.38096.0  events.out.tfevents.1760799116.Mac.38096.3  events.out.tfevents.1760799138.Mac.38096.102  events.out.tfevents.1760799138.Mac.38096.105  events.out.tfevents.1760799138.Mac.38096.108  events.out.tfevents.1760799138.Mac.38096.111  events.out.tfevents.1760799138.Mac.38096.114  events.out.tfevents.1760799138.Mac.38096.117  events.out.tfevents.1760799138.Mac.38096.12  events.out.tfevents.1760799138.Mac.38096.120  events.out.tfevents.1760799138.Mac.38096.123  events.out.tfevents.1760799138.Mac.38096.126  events.out.tfevents.1760799138.Mac.38096.129  events.out.tfevents.1760799138.Mac.38096.132  events.out.tfevents.1760799138.Mac.38096.135  events.out.tfevents.1760799138.Mac.38096.138  events.out.tfevents.1760799138.Mac.38096.141  events.out.tfevents.1760799138.Mac.38096.144  events.out.tfevents.1760799138.Mac.38096.147  (+182 more)
(+406 files in other folders)
